--- a/glide.yaml
+++ b/glide.yaml
@@ -5,3 +5,5 @@ import:
 - package: github.com/satori/go.uuid
   version: ^1.1.0
 - package: github.com/hokaccha/go-prettyjson
+- package: github.com/spf13/pflag
+  version: ^1.0.0
